--- a/packages/themes/src/morpheme/_forms.dark.scss
+++ b/packages/themes/src/morpheme/_forms.dark.scss
@@ -4,6 +4,7 @@
   .v-select,
   .v-select-button,
   .v-textarea,
+  .autocomplete,
   .v-data-table-pagination-items-per-page {
     /* input control */
     --v-input-border-color: var(--color-gray-true-700);
